--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="./favicon.ico" rel="icon" type="image/x-icon" />
     <title>Counterpick Set Reporter</title>
   </head>
   <body>
